WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247895
[web-animations] changing writing-mode or direction on an element that has an animation targeting a logical property should ensure animation resolution is scheduled
https://bugs.webkit.org/show_bug.cgi?id=247895
Summary
[web-animations] changing writing-mode or direction on an element that has an...
Antoine Quint
Reported
2022-11-14 07:47:00 PST
We are failing this test in web-animations/timing-model/timelines/update-and-send-events-replacement.html: promise_test(async t => { const div = createDiv(t); const animA = div.animate( { marginTop: '10px' }, { duration: 1, fill: 'forwards' } ); const animB = div.animate( { marginInlineStart: '20px' }, { duration: 1, fill: 'forwards' } ); await animA.finished; assert_equals(animA.replaceState, 'active'); assert_equals(animB.replaceState, 'active'); div.style.writingMode = 'vertical-rl'; assert_equals(animA.replaceState, 'active'); assert_equals(animB.replaceState, 'active'); await waitForNextFrame(); assert_equals(animA.replaceState, 'removed'); assert_equals(animB.replaceState, 'active'); }, 'Removes an animation by another animation using logical properties after updating the context'); We fail the second-to-last assertion because we fail to schedule an animation update after changing writing-mode and thus don't run the procedure to remove replaced animations.
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2022-11-14 08:02:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6475
EWS
Comment 2
2022-11-14 12:32:18 PST
Committed
256667@main
(1b793da552f7): <
https://commits.webkit.org/256667@main
> Reviewed commits have been landed. Closing PR #6475 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-11-14 12:33:20 PST
<
rdar://problem/102333310
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug